Updated HTML files and assets

--- a/assets/style.css
+++ b/assets/style.css
@@ -1392,7 +1392,7 @@ header .border-bottom{border-color: #ecf4fb !important; }
     padding: 25px 0px;
 }
 .footer{background: #f5faff;
-    background: #f5faff url('../assets/images/aibg1.png') no-repeat center/cover;
+    background: #f5faff url('../assets/images/aibg1a.png') no-repeat center/cover;
     padding: 60px 0px 30px;}
 .footer h3 {
     padding-bottom: 16px;
