--- a/assets/style.css
+++ b/assets/style.css
@@ -19,7 +19,34 @@ header{ box-shadow: 0px 1px 2px #e4e7f3;}
 header .border-bottom{border-color: #ecf4fb !important; }
 
 /* SUBMENU */
- 
+
+.dropdown:hover > .dropdown-menu {
+    display: block;
+    margin-top: 0; /* Fix space issue */
+}
+
+/* Position the second-level dropdown */
+.dropdown-submenu {
+    position: relative;
+}
+
+.dropdown-submenu .dropdown-menu {
+    top: 0;
+    left: 100%;
+    margin-left: 0.1rem;
+    display: none;
+    position: absolute;
+}
+
+/* Show submenu on hover */
+.dropdown-submenu:hover > .dropdown-menu {
+    display: block;
+}
+
+
+.dropdown-submenu:hover>.dropdown-menu {
+    display: block;
+}
 .dropdown:hover .dropdown-menu {
      
     opacity: 0;
@@ -55,9 +82,7 @@ header .border-bottom{border-color: #ecf4fb !important; }
     transition: all 0.4s;
 }
 
-.dropdown-submenu:hover>.dropdown-menu {
-    display: block;
-}
+
 
 .dropdown-submenu>a:after {
     display: block;
