--- a/assets/style.css
+++ b/assets/style.css
@@ -1517,6 +1517,44 @@ iframe {
 .bdr-btm{    border-bottom: 1px solid #e1e8fc;}
     
 
+/* Medical Coding Application start */
+
+.core-points-medical-coding{  padding: 36px;}
+.core-points-medical-coding img {width: 100%;}
+.types-medical-sect{background: url('../assets/images/types-bg.png') no-repeat center/cover; padding: 50px 0 200px 0;}
+.types-medical-sect-bottom .container {margin-top: -170px;}
+.types-medical-sect-bottom .goal-card { min-height: 305px;}
+.types-medical-sect-bottom .goal-card h2::after{height: auto;}
+.goal-card h2{margin-top: 20px;font-size: 23px;}
+.types-medical-sect-bottom h3 {font-size: 16px; margin-bottom: 20px;}
+.types-medical-sect-bottom p{margin: 0;}
+.types-medical-sect-bottom .container{ border-radius: 9px; box-shadow: 0px 0px 4px #B5D9E8; background: #fff; padding: 30px 0;}
+.types-medical-sect-bottom .goal-card {padding: 16px;border-radius: 0; box-shadow: none;height: auto; padding: 16px 30px;}
+section.types-medical-sect-bottom {margin-bottom: 50px;}
+.solution-bg {background: url('../assets/images/solution-bg.jpg') no-repeat center/cover; padding: 100px 0; color: #fff;}
+.solution-bg p{color: #fff; padding: 0 100px 0 0;}
+.futurebox .goal-card h2 { font-size: 17px; font-weight: 500;}
+.fure-img {text-align: center;}
+.futurebox{background:#ECF5FB;}
+.futurebox .goal-card { padding: 26px;  text-align: left; height: 300px;}
+.fot-im { text-align: center;}
+/* Medical Coding Application end */
+
+ /* Hospital Machine Intergration start */
+.suimg-box{text-align: center;}
+.sca-box1-img { width: 8%;}
+.sca-box1-text { width: 92%;}
+.sca-box1 h3{margin-bottom: 30px;}
+.scalable-sec h3{margin-bottom: 40px;}
+.sca-box1 { margin-bottom: 40px; font-size: 19px; }
+.key-ben-sect .goal-card {padding: 26px;text-align: left; height: 240px;}
+.key-ben-sect .fure-img { text-align: left;}
+.whytech1-bg {background: #EEFAFF;}
+span.protxt { color: #29ABE2;}
+ /* Hospital Machine Intergration end */
+
+
+
 @media (min-width: 320px) and (max-width: 767.98px) {
     .pt-width{width: 260px;}
     .navbar{--bs-navbar-padding-y:0px;}
@@ -1572,4 +1610,23 @@ iframe {
     .crmcta-sec h4 {
         font-size: 18px;}
 
+
+        
+/* Medical Coding Application start */
+.core-points-medical-coding {padding: 0;}
+section.types-medical-sect-bottom {margin: 10px;margin-bottom: 50px;}
+.solution-bg{background: #79c9ec; padding: 20px;}
+.solution-bg p{padding: 0;}
+ /* Medical Coding Application end */   
+
+ /* Hospital Machine Intergration start */
+ .key-ben-sect { padding: 30px 0;}
+ .scalable-sec h3{padding-top: 30px;}
+ .whytech1-bg{text-align: center;}
+ .whytech1-bg h2 { font-size: 28px; padding-bottom: 6px;}
+ .testimonials-sec h2 { font-size: 26px;}
+  /* Hospital Machine Intergration end */
+
+
+  
   }
